--- a/ML_AutoTheft_Toronto.ipynb
+++ b/ML_AutoTheft_Toronto.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN63zumSRrabtwpSGtUV2No",
+      "authorship_tag": "ABX9TyNNY+fn8SIAsEbd5rh+Zwdw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -607,15 +607,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "💡 The 2 extra columns correspond to coordinates X and Y."
-      ],
-      "metadata": {
-        "id": "WK8TJHQL8Kud"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "We can notice that we have multiple crimes being logged, not sure autotheft. We also notice that we have 2014 data. Let's explore this in more detail."
       ],
       "metadata": {
@@ -700,6 +691,23 @@
           "execution_count": 9
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "💡 There are two interesting offences: \"Theft Of Motor Vehicle\" and \"Theft From Motor Vehicle Over\".\n",
+        "\n",
+        "After some digging, this is what I found:\n",
+        "\n",
+        "\"Theft From Motor Vehicle Over\": This category refers to theft of items from inside a motor vehicle. It includes incidents where items such as personal belongings, electronic devices, or valuables are stolen from a vehicle, typically without the vehicle itself being stolen. Examples include theft of purses, wallets, laptops, or electronic gadgets left in plain sight within the vehicle.\n",
+        "\n",
+        "\"Theft From Motor Vehicle Over\": This category refers to the theft of the motor vehicle itself. It includes incidents where the entire vehicle is stolen by unauthorized individuals. This can involve stealing parked cars from public streets, parking lots, or private driveways. In some cases, stolen vehicles may be used for joyriding, resale, or other criminal activities.\n",
+        "\n",
+        "💡 **We can also see that \"Theft Of Motor Vehicle\" is the third most reported crime**"
+      ],
+      "metadata": {
+        "id": "Yh1ukCOV-lzm"
+      }
     }
   ]
 }
