--- a/ML_AutoTheft_Toronto.ipynb
+++ b/ML_AutoTheft_Toronto.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNd0lCj1pULrQiWwrbkI5lf",
+      "authorship_tag": "ABX9TyNGzbcDNXEw7G7xaK3tmhcQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1832,7 +1832,7 @@
         "models_test_result = {\n",
         "    \"SARIMAX\": evaluate_sarimax(),\n",
         "    \"ARIMAX\": evaluate_arimax(),\n",
-        "    \"SARIMAX - sesonal\": evaluate_sarimax_sesonal(),\n",
+        "    \"SARIMAX - sesonal\": evaluate_sarimax_sesonal()\n",
         "}\n",
         "\n",
         "\n",
@@ -1847,9 +1847,9 @@
           "height": 507
         },
         "id": "3IpQP4yj8NYw",
-        "outputId": "f9a19fd2-0d27-4b14-f306-b1c9d8c7d6f8"
+        "outputId": "0037c19f-f177-4b58-8c15-672140d25167"
       },
-      "execution_count": 238,
+      "execution_count": 268,
       "outputs": [
         {
           "output_type": "stream",
@@ -1878,13 +1878,13 @@
         "  print(f\"[{label}]RMSE: {evaluate_model_result(model_result)}\")\n"
       ],
       "metadata": {
-        "id": "DomzFPY2K_GU",
-        "outputId": "a3b83716-fbfc-4096-bf14-84415e614851",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "DomzFPY2K_GU",
+        "outputId": "ac7e94c9-191f-4ba5-a94a-9a9646186f2a"
       },
-      "execution_count": 239,
+      "execution_count": 269,
       "outputs": [
         {
           "output_type": "stream",
