--- a/ML_AutoTheft_Toronto.ipynb
+++ b/ML_AutoTheft_Toronto.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNGCvNMj3VSVT5Eve8oIW85",
+      "authorship_tag": "ABX9TyPEdd2Yh5bQPLJYDRGz8wYr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1145,7 +1145,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 579
+          "height": 559
         },
         "id": "HTgLciBIHPZ7",
         "outputId": "8f58f680-ac36-402e-a9da-2ccd1abad2e0"
@@ -1659,7 +1659,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Trying multiple models\n"
+        "# Trying multiple models\n",
+        "\n",
+        "# 1. Divide the model between train and test"
       ],
       "metadata": {
         "id": "d4rAOGCck_AT"
@@ -1719,48 +1721,19 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "train"
+        "# Implementation of multiple time series models"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "pz9YrXKX0sW4",
-        "outputId": "202a099b-59b7-4e62-fb39-12a9d8db29dd"
-      },
-      "execution_count": 306,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "index_date\n",
-              "2014-01-01    240\n",
-              "2014-02-01    238\n",
-              "2014-03-01    319\n",
-              "2014-04-01    304\n",
-              "2014-05-01    303\n",
-              "             ... \n",
-              "2021-09-01    686\n",
-              "2021-10-01    720\n",
-              "2021-11-01    665\n",
-              "2021-12-01    616\n",
-              "2022-01-01    683\n",
-              "Length: 97, dtype: int64"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 306
-        }
-      ]
+        "id": "55qHhECmiZWJ"
+      }
     },
     {
       "cell_type": "code",
       "source": [
-        "# prompt: use y to train SARIMAX  and then use predict to predict on the test data\n",
         "from statsmodels.tsa.statespace.sarimax import SARIMAX\n",
+        "\n",
         "def evaluate_sarimax():\n",
         "  model = SARIMAX(y, order = (1, 0, 0))\n",
         "  sarimax_model = model.fit()\n",
@@ -1782,7 +1755,6 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
         "def evaluate_sarimax_sesonal():\n",
         "  model = SARIMAX(y, order = (1, 0, 0), seasonal_order=(2,2,2,12))\n",
         "  sarimax_model = model.fit()\n",
@@ -1833,104 +1805,31 @@
         "  m = Prophet()\n",
         "  profet_train = train.copy()\n",
         "  df_counts = pd.DataFrame({'y': profet_train, 'ds': profet_train.index})\n",
-        "  # df_counts.index.names = ['ds']\n",
-        "  # return df_counts\n",
-        "  # profet_train = profet_train.rename_axis(columns={'index_date': 'ds', 'count': 'y'}, inplace=True)\n",
+        "\n",
         "  m.fit(df_counts)\n",
-        "  start = len(train)\n",
-        "  end = len(train) + len(test) - 1\n",
+        "\n",
         "  future = m.make_future_dataframe(periods=len(test.values), freq='M', include_history=False)\n",
         "  forecast = m.predict(future)\n",
         "  result = forecast[['ds', 'yhat']]\n",
         "  result = result.rename(columns={'ds': 'index_date', 'yhat': 'count'})\n",
         "  result['count'] = result['count'].astype('int64')\n",
         "  result.set_index('index_date')\n",
-        "  # return result.squeeze()\n",
-        "  return pd.Series(result['count'].values, index=result['index_date'], dtype='int64')\n",
-        "\n",
-        "\n",
-        "result = evaluate_profet()\n",
-        "\n",
-        "# pandas_series = pd.Series(result['count'], index=result['index_date'])\n",
-        "\n",
-        "display(result)\n",
-        "\n",
-        "\n",
-        "# pandas_series = pd.Series(result['count'], index=result['index_date'], dtype='str')\n",
-        "# display(pandas_series)\n",
-        "  # model = ARIMA(y, order = (1, 0, 0))\n",
-        "  # sarimax_model = model.fit()\n",
-        "  # start = len(train)\n",
-        "  # end = len(train) + len(test) - 1\n",
-        "  # predictions = sarimax_model.predict(start=start, end=end, dynamic=False)\n",
-        "\n",
-        "  # y_pred_df = test.copy()\n",
-        "  # for i, value in enumerate(predictions):\n",
-        "  #   y_pred_df[i] = predictions[i]\n",
-        "  # return y_pred_df"
+        "  return pd.Series(result['count'].values, index=result['index_date'], dtype='int64')"
       ],
       "metadata": {
-        "id": "ODIlDcVvViYT",
-        "outputId": "87de446a-c68c-4a26-b48a-963bd4a31ec8",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 679
-        }
+        "id": "ODIlDcVvViYT"
       },
-      "execution_count": 392,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "INFO:prophet:Disabling weekly seasonality. Run prophet with weekly_seasonality=True to override this.\n",
-            "INFO:prophet:Disabling daily seasonality. Run prophet with daily_seasonality=True to override this.\n",
-            "DEBUG:cmdstanpy:input tempfile: /tmp/tmptmc55qvn/s9oyn_fx.json\n",
-            "DEBUG:cmdstanpy:input tempfile: /tmp/tmptmc55qvn/738xhtgg.json\n",
-            "DEBUG:cmdstanpy:idx 0\n",
-            "DEBUG:cmdstanpy:running CmdStan, num_threads: None\n",
-            "DEBUG:cmdstanpy:CmdStan args: ['/usr/local/lib/python3.10/dist-packages/prophet/stan_model/prophet_model.bin', 'random', 'seed=47215', 'data', 'file=/tmp/tmptmc55qvn/s9oyn_fx.json', 'init=/tmp/tmptmc55qvn/738xhtgg.json', 'output', 'file=/tmp/tmptmc55qvn/prophet_modelyiptihwj/prophet_model-20240401023948.csv', 'method=optimize', 'algorithm=newton', 'iter=10000']\n",
-            "02:39:48 - cmdstanpy - INFO - Chain [1] start processing\n",
-            "INFO:cmdstanpy:Chain [1] start processing\n",
-            "02:39:49 - cmdstanpy - INFO - Chain [1] done processing\n",
-            "INFO:cmdstanpy:Chain [1] done processing\n"
-          ]
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "index_date\n",
-              "2022-01-31    519\n",
-              "2022-02-28    539\n",
-              "2022-03-31    589\n",
-              "2022-04-30    620\n",
-              "2022-05-31    612\n",
-              "2022-06-30    640\n",
-              "2022-07-31    684\n",
-              "2022-08-31    543\n",
-              "2022-09-30    696\n",
-              "2022-10-31    722\n",
-              "2022-11-30    654\n",
-              "2022-12-31    608\n",
-              "2023-01-31    575\n",
-              "2023-02-28    588\n",
-              "2023-03-31    652\n",
-              "2023-04-30    684\n",
-              "2023-05-31    670\n",
-              "2023-06-30    699\n",
-              "2023-07-31    751\n",
-              "2023-08-31    577\n",
-              "2023-09-30    757\n",
-              "2023-10-31    792\n",
-              "2023-11-30    719\n",
-              "2023-12-31    663\n",
-              "dtype: int64"
-            ]
-          },
-          "metadata": {}
-        }
-      ]
+      "execution_count": 395,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Evaluation of all models"
+      ],
+      "metadata": {
+        "id": "IOTFAsk0iqWA"
+      }
     },
     {
       "cell_type": "code",
@@ -1995,6 +1894,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Evaluating each model using RMSE"
+      ],
+      "metadata": {
+        "id": "fxcuiN5Eiuk2"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "for label, model_result in models_test_result.items():\n",
@@ -2034,7 +1942,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "TODO"
+        "TODO: Add result interpretation here"
       ],
       "metadata": {
         "id": "r7hzeHh-U29X"
